--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-langchain==0.1.0
-langchain-community==0.0.13
-langchain-openai==0.0.2
-langchain-huggingface==0.1.2
+langchain>=0.1.0
+langchain-community>=0.0.13
+langchain-openai>=0.0.2
+langchain-huggingface>=0.1.2
+langchain-core>=0.3.15
 pypdf==3.17.1
 python-dotenv==1.0.0
 faiss-cpu==1.7.4
