--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,6 @@ langchain-core>=0.3.15
 pypdf==3.17.1
 python-dotenv==1.0.0
 faiss-cpu==1.7.4
-sentence-transformers==2.2.2
+sentence-transformers>=2.6.0
 streamlit==1.29.0
 openai>=1.6.1,<2.0.0 
