--- a/requirements.txt
+++ b/requirements.txt
@@ -3,9 +3,9 @@ langchain-community>=0.0.13
 langchain-openai>=0.0.2
 langchain-huggingface>=0.1.2
 langchain-core>=0.3.15
-pypdf==3.17.1
-python-dotenv==1.0.0
-faiss-cpu==1.7.3
+pypdf>=3.17.1
+python-dotenv>=1.0.0
+streamlit>=1.31.0
+faiss-cpu==1.7.0
 sentence-transformers>=2.6.0
-streamlit==1.29.0
-openai>=1.6.1,<2.0.0 
+openai>=1.12.0 
