--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,6 @@ langchain-core>=0.3.15
 pypdf>=3.17.1
 python-dotenv>=1.0.0
 streamlit>=1.31.0
-faiss-cpu-no-avx2==1.6.5
+faiss-cpu==1.5.3
 sentence-transformers>=2.6.0
 openai>=1.12.0 
