--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,8 @@ langchain-core>=0.3.15
 pypdf>=3.17.1
 python-dotenv>=1.0.0
 streamlit>=1.31.0
+setuptools>=65.5.1
+wheel>=0.38.4
 numpy>=1.20.0,<1.24.0
 faiss-cpu==1.5.3
 sentence-transformers>=2.6.0
