--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ python-dotenv>=1.0.0
 streamlit>=1.31.0
 openai>=1.12.0
 sentence-transformers>=2.6.0
-chromadb==0.4.22
-transformers==4.37.2
-torch==2.2.0 
+chromadb>=0.4.22
+transformers>=4.37.2
+torch==2.2.0
+tokenizers>=0.19.1 
