--- a/requirements.txt
+++ b/requirements.txt
@@ -11,4 +11,4 @@ sentence-transformers==2.2.2
 chromadb==0.4.22
 transformers==4.37.2
 torch==2.2.0
-tokenizers==0.13.3 
+tokenizers>=0.14.0,<0.19.0 
