--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,14 @@
-langchain>=0.1.0
-langchain-community>=0.0.13
-langchain-openai>=0.0.2
-langchain-huggingface>=0.1.2
-langchain-core>=0.3.15
-pypdf>=3.17.1
-python-dotenv>=1.0.0
-streamlit>=1.31.0
-openai>=1.12.0
-sentence-transformers>=2.6.0
-chromadb>=0.4.22
-transformers>=4.37.2
-torch==2.2.0
-tokenizers>=0.19.1 
+langchain==0.1.0
+langchain-community==0.0.13
+langchain-openai==0.0.2
+langchain-huggingface==0.1.2
+langchain-core==0.3.15
+pypdf==3.17.1
+python-dotenv==1.0.0
+streamlit==1.31.0
+openai==1.12.0
+sentence-transformers==2.2.2
+chromadb==0.4.22
+transformers==4.36.2
+torch==2.1.2
+tokenizers==0.15.0 
