--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 langchain==0.2.0
 langchain-community>=0.0.14
-langchain-openai==0.0.2
+langchain-openai>=0.0.3
 langchain-huggingface==0.1.2
 langchain-core>=0.2.0,<0.3.0
 pypdf==3.17.1
