--- a/requirements.txt
+++ b/requirements.txt
@@ -9,6 +9,6 @@ streamlit==1.31.0
 openai==1.12.0
 sentence-transformers>=2.6.0
 chromadb==0.4.22
-transformers==4.36.2
+transformers>=4.39.0
 torch==2.2.0
 tokenizers>=0.19.1 
