--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,16 @@
-langchain==0.2.0
-langchain-community>=0.0.14
-langchain-openai>=0.0.3
-langchain-huggingface==0.0.1
-langchain-core>=0.2.0,<0.3.0
-pypdf==3.17.1
-python-dotenv==1.0.0
-streamlit==1.31.0
-openai==1.12.0
-sentence-transformers>=2.6.0
-chromadb==0.4.22
-transformers>=4.39.0
-torch==2.2.0
-tokenizers>=0.19.1
-fastapi==0.110.0
-uvicorn==0.27.1 
+langchain
+langchain-community
+langchain-openai
+langchain-huggingface
+langchain-core
+pypdf
+python-dotenv
+streamlit
+openai
+sentence-transformers
+chromadb
+transformers
+torch
+tokenizers
+fastapi
+uvicorn 
