--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,16 @@
-langchain
-langchain-community
-langchain-openai
-langchain-huggingface
-langchain-core
-pypdf
-python-dotenv
-streamlit
-openai
-sentence-transformers
-chromadb
-transformers
-torch
-tokenizers
-fastapi
-uvicorn 
+langchain==0.1.0
+langchain-community==0.0.13
+langchain-openai==0.0.2
+langchain-huggingface==0.0.1
+langchain-core==0.1.10
+pypdf==3.17.1
+python-dotenv==1.0.0
+streamlit==1.31.0
+openai==1.12.0
+sentence-transformers==2.2.2
+chromadb==0.4.22
+transformers==4.36.2
+torch==2.1.2
+tokenizers==0.15.0
+fastapi==0.109.2
+uvicorn==0.27.1 
