--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,6 @@ langchain-huggingface>=0.0.1
 langchain-core>=0.1.52,<0.3.0
 pypdf==3.17.1
 python-dotenv==1.0.0
-streamlit==1.31.0
 openai==1.12.0
 sentence-transformers==2.2.2
 chromadb==0.4.22
@@ -13,4 +12,6 @@ transformers==4.36.2
 torch==2.2.0
 tokenizers==0.15.0
 fastapi==0.109.2
-uvicorn==0.27.1 
+uvicorn==0.27.1
+python-multipart
+jinja2 
