--- a/requirements.txt
+++ b/requirements.txt
@@ -3,15 +3,15 @@ langchain-community>=0.0.13
 langchain-openai>=0.0.2
 langchain-huggingface>=0.0.1
 langchain-core>=0.1.52,<0.3.0
-pypdf==3.17.1
-python-dotenv==1.0.0
-openai==1.12.0
-sentence-transformers==2.2.2
-chromadb==0.4.22
-transformers==4.36.2
-torch==2.2.0
-tokenizers==0.15.0
-fastapi==0.109.2
-uvicorn==0.27.1
+pypdf>=3.17.1
+python-dotenv>=1.0.0
+openai>=1.12.0
+sentence-transformers>=2.2.2
+chromadb>=0.4.22
+transformers>=4.36.2
+torch>=2.2.0
+tokenizers>=0.15.0
+fastapi>=0.109.2
+uvicorn>=0.27.1
 python-multipart
 jinja2 
