--- a/requirements.txt
+++ b/requirements.txt
@@ -1,17 +1,16 @@
 langchain>=0.1.0
+langchain-openai>=0.0.5
 langchain-community>=0.0.13
-langchain-openai>=0.0.2
 langchain-huggingface>=0.0.1
-langchain-core>=0.1.52,<0.3.0
+langchain-chroma>=0.0.1
+chromadb>=0.4.22
+sentence-transformers>=2.6.0
+tokenizers>=0.19.1
+transformers>=4.37.2
+torch>=2.2.0
 pypdf>=3.17.1
 python-dotenv>=1.0.0
-openai>=1.12.0
-sentence-transformers>=2.2.2
-chromadb>=0.4.22
-transformers>=4.36.2
-torch>=2.2.0
-tokenizers>=0.15.0
 fastapi>=0.109.2
 uvicorn>=0.27.1
-python-multipart
-jinja2 
+jinja2>=3.1.3
+python-multipart>=0.0.9 
