--- a/requirements.txt
+++ b/requirements.txt
@@ -4,9 +4,9 @@ langchain-community>=0.0.13
 langchain-huggingface>=0.0.1
 langchain-chroma>=0.0.1
 chromadb>=0.4.22
-sentence-transformers>=2.2.2
-tokenizers>=0.15.0
-transformers>=4.36.2
+sentence-transformers==2.2.2
+tokenizers==0.13.3
+transformers==4.30.2
 torch>=2.2.0
 pypdf>=3.17.1
 python-dotenv>=1.0.0
