--- a/fly.toml
+++ b/fly.toml
@@ -1,21 +1,22 @@
-app = "rag-chat-assistant"
-primary_region = "ams"
+# fly.toml app configuration file generated for rag-purple-night-1013 on 2025-04-08T10:59:05+03:00
+#
+# See https://fly.io/docs/reference/configuration/ for information about how to use this file.
+#
+
+app = 'rag-purple-night-1013'
+primary_region = 'fra'
 
 [build]
-  dockerfile = "Dockerfile"
-
-[env]
-  PORT = "8080"
 
 [http_service]
   internal_port = 8080
   force_https = true
-  auto_stop_machines = true
+  auto_stop_machines = 'stop'
   auto_start_machines = true
   min_machines_running = 0
-  processes = ["app"]
+  processes = ['app']
 
 [[vm]]
-  cpu_kind = "shared"
+  memory = '1gb'
+  cpu_kind = 'shared'
   cpus = 1
-  memory_mb = 1024 
