--- a/requirements.txt
+++ b/requirements.txt
@@ -4,13 +4,16 @@ langchain-community>=0.0.13
 langchain-huggingface>=0.0.1
 langchain-chroma>=0.0.1
 chromadb>=0.4.22
-sentence-transformers==2.2.2
-tokenizers==0.13.3
-transformers==4.30.2
-torch>=2.2.0
-pypdf>=3.17.1
+sentence-transformers>=2.6.0
+tokenizers>=0.19.1
+transformers>=4.38.2
+accelerate>=0.27.2
+bitsandbytes>=0.42.0
+pydantic>=2.5.0
 python-dotenv>=1.0.0
 fastapi>=0.109.2
 uvicorn>=0.27.1
+python-multipart>=0.0.9
 jinja2>=3.1.3
-python-multipart>=0.0.9 
+tiktoken>=0.6.0
+pypdf>=3.17.1 
