--- a/fly.toml
+++ b/fly.toml
@@ -1,9 +1,9 @@
-# fly.toml app configuration file generated for rag-purple-night-1013 on 2025-04-08T10:59:05+03:00
+# fly.toml app configuration file generated for rag-lvmqca on 2025-04-10T19:10:28Z
 #
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
 
-app = 'rag-purple-night-1013'
+app = 'rag-lvmqca'
 primary_region = 'fra'
 
 [build]
@@ -20,3 +20,4 @@ primary_region = 'fra'
   memory = '1gb'
   cpu_kind = 'shared'
   cpus = 1
+  memory_mb = 1024
